Update gradle, publish using GitHub actions and use NeoForge srgutils.